--- a/telemetry/analyzer/pom.xml
+++ b/telemetry/analyzer/pom.xml
@@ -13,7 +13,12 @@
     <name>analyzer</name>
 
     <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <grpc-client-spring-boot-starter.version>3.1.0.RELEASE</grpc-client-spring-boot-starter.version>
+        <lombok.version>1.18.34</lombok.version>
+        <schemas.version>1.0-SNAPSHOT</schemas.version>
     </properties>
 
     <dependencies>
@@ -42,7 +47,7 @@
         <dependency>
             <groupId>net.devh</groupId>
             <artifactId>grpc-client-spring-boot-starter</artifactId>
-            <version>3.1.0.RELEASE</version>
+            <version>${grpc-client-spring-boot-starter.version}</version>
         </dependency>
 
         <!--postgres driver-->
@@ -55,12 +60,12 @@
         <dependency>
             <groupId>ru.yandex.practicum</groupId>
             <artifactId>proto-schemas</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${schemas.version}</version>
         </dependency>
         <dependency>
             <groupId>ru.yandex.practicum</groupId>
             <artifactId>avro-schemas</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${schemas.version}</version>
         </dependency>
     </dependencies>
 
@@ -82,7 +87,7 @@
                             <path>
                                 <groupId>org.projectlombok</groupId>
                                 <artifactId>lombok</artifactId>
-                                <version>1.18.34</version>
+                                <version>${lombok.version}</version>
                             </path>
                         </annotationProcessorPaths>
                     </configuration>
