--- a/telemetry/collector/pom.xml
+++ b/telemetry/collector/pom.xml
@@ -28,13 +28,16 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <!--Kafka-->
         <dependency>
             <groupId>net.devh</groupId>
             <artifactId>grpc-server-spring-boot-starter</artifactId>
             <version>3.1.0.RELEASE</version>
         </dependency>
-
         <!--Inner-->
         <dependency>
             <groupId>ru.yandex.practicum</groupId>
