--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -11,6 +11,7 @@ spring:
         native:
           search-locations:
             - classpath:config/telemetry/{application}
+            - classpath:config/commerce/{application}
 
 eureka:
   client:
