--- a/infra/config-server/src/main/resources/config/telemetry/analyzer/application.yaml
+++ b/infra/config-server/src/main/resources/config/telemetry/analyzer/application.yaml
@@ -5,7 +5,7 @@ topic:
 spring:
   datasource:
     driver-class-name: "org.postgresql.Driver"
-    url: "jdbc:postgresql://localhost:5433/postgres"
+    url: "jdbc:postgresql://localhost:5433/telemetry_analyzer_db"
     username: "postgres"
     password: "postgres"
   sql:
