--- a/commerce/pom.xml
+++ b/commerce/pom.xml
@@ -15,6 +15,7 @@
         <module>shopping-store</module>
         <module>shopping-cart</module>
         <module>warehouse</module>
+        <module>interaction-api</module>
     </modules>
 
 </project>
