--- a/commerce/pom.xml
+++ b/commerce/pom.xml
@@ -15,7 +15,8 @@
         <module>shopping-store</module>
         <module>shopping-cart</module>
         <module>warehouse</module>
-        <module>interaction-api</module>
+        <module>order</module>
+        <module>payment</module>
+        <module>delivery</module>
     </modules>
-
 </project>
