--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 0
+  port: 8888
 spring:
   application:
     name: config-server
@@ -12,7 +12,7 @@ spring:
           search-locations:
             - classpath:config/telemetry/{application}
             - classpath:config/commerce/{application}
-
+            - classpath:config/infra/{application}
 eureka:
   client:
     serviceUrl:
