--- a/infra/pom.xml
+++ b/infra/pom.xml
@@ -11,10 +11,10 @@
 
     <artifactId>infra</artifactId>
     <packaging>pom</packaging>
-
     <modules>
         <module>config-server</module>
         <module>discovery-server</module>
+        <module>gateway</module>
     </modules>
 
 </project>
